Refactor to use toList() for stream collection